--- a/cloud_monitor/pyproject.toml
+++ b/cloud_monitor/pyproject.toml
@@ -14,6 +14,8 @@ requests = "^2.26.0"
 boto3 = "^1.20.26"
 fastapi = "^0.70.1"
 uvicorn = {extras = ["standard"], version = "^0.16.0"}
+dramatiq = "^1.12.1"
+dramatiq-sqs = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
