--- a/apps/apprunner_bezos.json
+++ b/apps/apprunner_bezos.json
@@ -2,7 +2,7 @@
         "ServiceName": "BezosQuoteGenerator",
         "SourceConfiguration": {
             "ImageRepository": {
-                "ImageIdentifier": "257500476691.dkr.ecr.us-east-2.amazonaws.com/bezos-quote-generator:latest",
+                "ImageIdentifier": "AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/bezos-quote-generator:latest",
                 "ImageConfiguration": {
                     "Port": "80"
                 },
@@ -10,7 +10,7 @@
             },
             "AutoDeploymentsEnabled": true,
             "AuthenticationConfiguration": {
-                "AccessRoleArn": "arn:aws:iam::257500476691:role/service-role/AppRunnerECRAccessRole"
+                "AccessRoleArn": "arn:aws:iam::AWS_ACCOUNT_ID:role/service-role/AppRunnerECRAccessRole"
             }
         },
         "InstanceConfiguration": {
