--- a/apps/bezos_quote_generator/bezos_quote_generator/pyproject.toml
+++ b/apps/bezos_quote_generator/bezos_quote_generator/pyproject.toml
@@ -7,7 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.70.1"
-uvicorn = {extras = ["standard"], version = "^0.16.0"}
+uvicorn = {extras = ["standard"], version = "^0.17.0"}
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
