--- a/apps/voting_game/pyproject.toml
+++ b/apps/voting_game/pyproject.toml
@@ -7,11 +7,12 @@ authors = ["Anu Joy <anu@taloflow.ai>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.70.1"
-uvicorn = {extras = ["standard"], version = "^0.16.0"}
+uvicorn = {extras = ["standard"], version = "^0.17.0"}
 pydantic = "^1.8.2"
 boto3 = "^1.20.26"
 dramatiq = {extras = ["watch"], version = "^1.12.1"}
 dramatiq-sqs = "^0.1.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
