Update cloud_monitor, add two services: trigger_alerts to check for outages and initiate alerting events and send_email to send alert emails via customer IO

--- a/cloud_monitor/pyproject.toml
+++ b/cloud_monitor/pyproject.toml
@@ -16,6 +16,8 @@ fastapi = "^0.70.1"
 uvicorn = {extras = ["standard"], version = "^0.16.0"}
 dramatiq = "^1.12.1"
 dramatiq-sqs = "^0.1.0"
+google-cloud-pubsub = "^2.12.0"
+customerio = "^1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
