--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "next build && next export && nexered --provider=cloudflare-pages",
     "start": "next start"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "chart.js": "^3.7.0",
     "final-form": "^4.20.6",
     "gray-matter": "^4.0.3",
+    "nexered": "^0.1.2",
     "next": "12.0.5",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.0",
