--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-intersection-observer": "^8.33.1",
     "react-markdown": "^8.0.1",
     "uuid": "^9.0.0"
