improvement: added canonical urls to pages. improvement: added sitemap to frontend. improvement: added form validation to alerts.

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.1",
     "@segment/snippet": "^4.15.3",
     "@tanstack/react-query": "^4.29.1",
     "@tippyjs/react": "^4.2.6",
@@ -23,7 +24,8 @@
     "react-hook-form": "^7.43.9",
     "react-intersection-observer": "^8.33.1",
     "react-markdown": "^8.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.0.7",
