--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,6 +37,8 @@
     "@types/react": "^18.0.35",
     "@types/react-autosuggest": "^10.1.5",
     "@types/react-beforeunload": "^2.1.1",
+    "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.3.11",
     "postcss-import": "^15.1.0",
