--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export && nexered --provider=cloudflare-pages",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
@@ -16,7 +16,6 @@
     "clsx": "^1.2.1",
     "gray-matter": "^4.0.3",
     "jotai": "^2.0.4",
-    "nexered": "^0.2.0",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.0.0",
