--- a/apps/frontend/data/us-east-1.json
+++ b/apps/frontend/data/us-east-1.json
@@ -3,8 +3,8 @@
   "regionNameLowerCase": "us east-1",
   "regionNameUpperCase": "US East 1",
   "dashBoardEndpoint": "https://gcp-dashboard.b-cdn.net",
-  "votingGameEndpoint": "https://d20v1ybfoa2k7c.cloudfront.net",
+  "votingGameEndpoint": "https://d2ukpsigtx5ac5.cloudfront.net",
   "S3Endpoint": "https://taloflow-aws-health-check.s3.amazonaws.com/if-i-get-requested-s3-is-up.jpg",
-  "QuoteEndpoint": "https://d1e63eaqx0w02n.cloudfront.net/quote",
+  "QuoteEndpoint": "https://https://d2nrou30wwby6a.cloudfront.net/quote",
   "LambdaEndpoint": "https://6bitdsm1cl.execute-api.us-east-1.amazonaws.com/prod/shades"
 }
